--- a/04_cases.qmd
+++ b/04_cases.qmd
@@ -18,3 +18,5 @@ North european countries are considered as leaders in climate policy
 ## The interesting case of Austria
 
 However, compared to the other countries, Austria is both considered as a laggard in climate policy and do not have a strong polarisation of its attitudes towards climate change. Consequently, we should definitely included it.
+
+What about Czech Republic regarding climate change ? Interesting east european case ? How does it looks when we look at eurobarometer data ? 
